syntax = "proto3";

package GrpcProto;
option csharp_namespace = "Grpc.Contract";

service GrpcService {
    rpc GetCustomer(GrpcRequest) returns (GrpcResponse);
	rpc GetCustomers(GrpcRequests)  returns (GrpcResponses);
	rpc GetCustomerWithBidirectionalStream(stream  GrpcRequest) returns (stream GrpcResponse);
	rpc GetCustomerWithClientStream(stream  GrpcRequest) returns (GrpcResponse);
	rpc GetCustomerWithServerStream(GrpcRequest)  returns (stream GrpcResponse);
}

message GrpcRequests{
	repeated .GrpcProto.GrpcRequest request = 1;
}

message GrpcRequest{
	int32 collector = 1;
}

message GrpcResponses{
	repeated .GrpcProto.GrpcResponse response = 1;
}

message GrpcResponse {
	int32 collector = 1;
}
